# Drones

./: .gitignore  README.md  update-repo.bat  version.sh
.github/workflows/: cmake-multi-platform.yml
Drivers/Motors/RS2205BLDC/: CMakeLists.txt
Drivers/Motors/RS2205BLDC/include/: RS2205BLDCMotor.h
Drivers/Motors/RS2205BLDC/src/: RS2205BLDCMotor.cpp
HAL/: CMakeLists.txt
HAL/STM32F411/: CMakeLists.txt  STM32F411_FLASH.ld
HAL/STM32F411/FreeRTOS/: CMakeLists.txt
HAL/STM32F411/FreeRTOS/include/: FreeRTOSConfig.h
HAL/STM32F411/FreeRTOS/src/: FreeRTOSHooks.c  FreeRTOSOverloads.cpp
HAL/STM32F411/config/board/: blackpill_f411.cfg
HAL/STM32F411/src/: GpInput.cpp  GpOutput.cpp  GpioHelpers.h  HardFaultHandler.cpp  LogEntry.h  PwmProvider.cpp  SerialLogger.cpp  SerialLogger.h  Stm32GpioInputPin.cpp  Stm32GpioInputPin.h  Stm32PwmPin.cpp  Stm32PwmPin.h  Stm32PwmTimer.cpp  Stm32PwmTimer.h  System.cpp
HAL/STM32F411/src/hardware_config/: stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  syscalls.c
HAL/include/: EHalPort.h  EHalTimer.h  EHalTimerChannel.h  ELogLevel.h  GpInput.h  GpInputConfig.h  GpOutput.h  HalGpio.h  HalPin.h  IGpInput.h  IGpOutput.h  IGpioInputPin.h  ILogger.h  IPwmPin.h  IPwmProvider.h  IPwmTimer.h  ISystem.h  Os.h  PwmConfig.h  PwmOutput.h
Interfaces/Data/: CMakeLists.txt
Interfaces/Data/include/: EDataType.h  IDataModel.h  IDataModule.h
Interfaces/Data/include/Enums/: EPropertyDataType.h  EPropertyType.h
Interfaces/Data/include/Properties/: IBoolProperty.h  ICharProperty.h  IFloatProperty.h  IInt16Property.h  IInt32Property.h  IInt8Property.h  IPercentageProperty.h  IProperty.h  IPropertyBase.h  IUint16Property.h  IUint32Property.h  IUint64Property.h  IUint8Property.h
Interfaces/DependencyInjection/: CMakeLists.txt
Interfaces/DependencyInjection/include/: EServiceLifetime.h  IocContainer.h
Interfaces/Events/: CMakeLists.txt
Interfaces/Events/include/: Callback.h  EEventOwner.h  Event.h  ICallbackBase.h
Interfaces/Motors/: CMakeLists.txt
Interfaces/Motors/include/: IMotor.h  IMotorData.h
Interfaces/Motors/src/: IMotor.cpp
Interfaces/Properties/: CMakeLists.txt
Interfaces/Properties/include/: FloatProperty.h  IProperty.h  ITypedProperty.h  IntProperty.h  Property.h  PropertyLock.h  UIntProperty.h
Modules/: CMakeLists.txt
Modules/DependencyInjection/: CMakeLists.txt
Modules/DependencyInjection/src/: IocContainer.cpp
Modules/Motors/: CMakeLists.txt
Modules/Motors/include/: MotorTask.h
Modules/Motors/src/: MotorTask.cpp
Modules/TaskFactory/: CMakeLists.txt
Modules/TaskFactory/include/: ETaskNotifyBits.h  TaskDefs.h  TaskFactory.h  TaskInstance.h
Modules/TaskFactory/src/: TaskFactory.cpp
Systems/Generic/: CMakeLists.txt  firmware.cmake  functions.cmake  hal_selection.cmake  modules.cmake  options.cmake  version.cmake
Systems/Quadcopter/: CMakeLists.txt
Systems/Quadcopter/src/: DataModule.cpp  DataModule.h  MotorData.cpp  MotorData.h  MotorManager.cpp  MotorManager.h  PwmProviderAdapter.h  main.cpp
Toolchains/: arm-none-eabi.cmake
